--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -117,6 +117,7 @@ jobs:
         # sed -i '/自定义项/d' .config
         # echo "自定义项=y" >> .config
         #########################################################################################
+        cp -f configs/templates/$TNAME.config .config
         sudo ./clear_tree
         sudo fakeroot ./build_firmware_modify $TNAME
         #sudo ./build_firmware_modify $TNAME 0
